2013-06-04  Sancho Lerena <slerena@artica.es>

	* functions_groups.php, 
	group_view.php: removed icons. Simplify render.

 	* styles/pandora.css: Added some space on databox
	tables (apply on main agent window).

2013-06-03  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/styles/pandora.css
	include/functions_groups.php
	include/functions_ui.php
	operation/agentes/alerts_status.php
	operation/agentes/estado_agente.php
	operation/agentes/group_view.php
	operation/events/events_list.php
	operation/events/events.php
	general/header.php
	godmode/agentes/modificar_agente.php: Few visual improvements
	including header layout and some forms as events or agent views

2013-06-03  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	index.php: Improve the tabs visual style and 
	fix the footer floating problem

2013-06-01  Sancho Lerena <slerena@artica.es>

	* include/styles/pandora.css: Set white (#fff) as new default page background

	* pandoradb_data.sql: by default don't use flash charts.

2013-05-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php
	include/styles/menu.css
	include/styles/pandora.css
	operation/agentes/tactical.php
	operation/events/events_list.php
	images/pandora.ico.gif
	images/pandora_header_logo_enterprise.png
	images/snmp.png
	images/pandora_header_logo.png
	images/pandora.ico
	general/logon_ok.php
	general/header.php: First group of visual 
	improvements for Pandora FMS 4.1

2013-05-31 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: avoid to characters and
	other shit that corrupts the image file.

2013-05-30 Miguel de Dios <miguel.dedios@artica.es>

	* operation/agentes/networkmap.php: fixed the string of button to
	refresh the networkmap.
	
	Fixes: #2254
	
	MERGED FROM THE TRUNK

2013-05-30 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor.php,